[gd_scene load_steps=13 format=3 uid="uid://bujhm36t06g86"]

[ext_resource type="Script" uid="uid://bpw32hn6qd5dt" path="res://Scenes/Objects/breakable_object.gd" id="1_4fclc"]
[ext_resource type="Texture2D" uid="uid://b2201rvjs35x" path="res://Assets/Modern_Office_Revamped_v1.2/4_Modern_Office_singles/16x16/Modern_Office_Singles_167.png" id="2_1gits"]
[ext_resource type="Shader" uid="uid://bjq03t15y2r74" path="res://Scenes/Objects/Outline.gdshader" id="2_gjq74"]
[ext_resource type="Texture2D" uid="uid://cmmberij6whlm" path="res://Art/brokenobjects/broken trash can.png" id="3_gjq74"]
[ext_resource type="Texture2D" uid="uid://lyclhvbbmlnn" path="res://Art/UI/ObjectHealthBar.png" id="4_13vml"]
[ext_resource type="Texture2D" uid="uid://bv537hm1166xv" path="res://Art/UI/ObjectHealthBarFill.png" id="5_j5er2"]
[ext_resource type="Texture2D" uid="uid://dgulw6rixcahh" path="res://Art/dustparticle.png" id="6_muuhn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gmxhk"]
shader = ExtResource("2_gjq74")
shader_parameter/clr = Color(0, 0, 0, 1)
shader_parameter/type = 2
shader_parameter/thickness = 1.0

[sub_resource type="Curve" id="Curve_s3q3b"]
_data = [Vector2(0, 0.820225), 0.0, 0.0, 0, 0, Vector2(0.419118, 0.674157), 0.0, 0.0, 0, 0, Vector2(0.772059, 0.0898877), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_jg0c0"]
curve = SubResource("Curve_s3q3b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_obm2q"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 9.0
initial_velocity_max = 9.0
gravity = Vector3(0, 0, 0)
scale_min = 0.8
color = Color(0.991164, 0.991164, 0.991164, 1)
alpha_curve = SubResource("CurveTexture_jg0c0")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6ikd"]
radius = 4.0
height = 12.0

[node name="BreakableObject" type="StaticBody2D"]
collision_layer = 5
collision_mask = 4
script = ExtResource("1_4fclc")

[node name="UnbrokenSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gmxhk")
texture = ExtResource("2_1gits")

[node name="BrokenSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_gjq74")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_bottom = 66.0
grow_horizontal = 0

[node name="Damage" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Damage Object"

[node name="Regen" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Regen Object"

[node name="HealthBar" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.705882)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -14.0
offset_right = 16.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
texture_under = ExtResource("4_13vml")
texture_progress = ExtResource("5_j5er2")

[node name="SmokeParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 6
texture = ExtResource("6_muuhn")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_obm2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 10)
rotation = 1.57074
shape = SubResource("CapsuleShape2D_b6ikd")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Damage" to="." method="deal_50_damage_to_self_test"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Regen" to="." method="regenerate_object"]
